--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 
 <html>
   <body>
+    <p id="A">Michael's playground</p>   
     <script>
       (async () => {
         const response = await fetch('https://api.github.com/repos/:michaelzhang0268/:mz/contents/');
