--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <p id="A">Michael's playground</p>   
     <script>
       (async () => {
-        const response = await fetch('https://api.github.com/repos/:michaelzhang0268/:mz/contents/');
+        const response = await fetch('https://api.github.com/repos/michaelzhang0628/mz/contents/');
         const data = await response.json();
         let htmlString = '<ul>';
         for (let file of data) {
