--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 
 <html>
   <body>
-    <p id="A">Michael's playground</p>   
     <script>
       (async () => {
-        const response = await fetch('https://api.github.com/repos/michaelzhang0628/mz/contents/');
+        const response = await fetch('https://api.github.com/repos/:michaelzhang0628/:mz/contents/');
         const data = await response.json();
         let htmlString = '<ul>';
         for (let file of data) {
