--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <body>
     <script>
       (async () => {
-        const response = await fetch('https://api.github.com/repos/:michaelzhang0628/:mz/contents/?ref=pages');
+        const response = await fetch('https://api.github.com/repos/:michaelzhang0628/:mz/contents?ref=pages');
         const data = await response.json();
         let htmlString = '<ul>';
         for (let file of data) {
