--- a/cake-recipe.html
+++ b/cake-recipe.html
@@ -10,6 +10,7 @@
             <li>Placed Baked Flour (Now a Cake) on Plate</li>
             <li>Place Icing on Cake</li>
             <li>Clean Up Baking Equipment</li>
+            <li>water<li>
         </ol>
     </body>
 </html>
