--- a/cake-recipe.html
+++ b/cake-recipe.html
@@ -1,5 +1,6 @@
 <html>
     <body>
+        Steps
         <ol>
             <li>Buy Flour</li>
             <li>Mix Flour with Water</li>
@@ -10,7 +11,15 @@
             <li>Placed Baked Flour (Now a Cake) on Plate</li>
             <li>Place Icing on Cake</li>
             <li>Clean Up Baking Equipment</li>
-            <li>water</li>
         </ol>
+        Ingredients
+        <ul>
+            <li>water<li>
+            <li>flour<li>
+            <li>egg<li>
+            <li>milk<li>
+            <li>sugar<li>
+            <li>icing<li>
+        </ul>
     </body>
 </html>
