--- a/cake-recipe.html
+++ b/cake-recipe.html
@@ -1,6 +1,6 @@
 <html>
     <body>
-        Steps
+        <h2>Steps</h2>
         <ol>
             <li>Buy Flour</li>
             <li>Mix Flour with Water</li>
@@ -12,14 +12,14 @@
             <li>Place Icing on Cake</li>
             <li>Clean Up Baking Equipment</li>
         </ol>
-        Ingredients
+        <h2>Ingredients</h2>
         <ul>
-            <li>water<li>
-            <li>flour<li>
-            <li>egg<li>
-            <li>milk<li>
-            <li>sugar<li>
-            <li>icing<li>
+            <li>water</li>
+            <li>flour</li>
+            <li>egg</li>
+            <li>milk</li>
+            <li>sugar</li>
+            <li>icing</li>
         </ul>
     </body>
 </html>
